--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+      console.log('Service Worker registered');
+    }).catch(function (err) {
+      console.log('Service Worker registration failed: ', err);
+    });
+  }
+</script>
 </body>
 </html>
